# cc_ccwc

./: LICENSE  README.md  pyproject.toml
ccwc/: __init__.py  main.py
tests/: test_ccwc.py
